# fastapi-template-basic

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/addons/: routes.py
app/base/: __init__.py  api_init.py  dependencies.py  logger.py
